# SSRFmap

./: .gitignore  .pre-commit-config.yaml  .relint.yml  Dockerfile  LICENSE  README.md  pyproject.toml  request.txt  requirements.txt  ssrfmap.py
core/: handler.py  requester.py  ssrf.py  utils.py
data/: cmd.jsp  example.py  ports  request.txt  request2.txt  request3.txt  request4.txt  request5.txt
examples/: example.py  request.txt  request2.txt  request3.txt  request4.txt  request5.txt  request6.txt  ssrf_dns.py
handlers/: http.py
modules/: alibaba.py  aws.py  axfr.py  consul.py  custom.py  digitalocean.py  docker.py  fastcgi.py  gce.py  github.py  httpcollaborator.py  memcache.py  mysql.py  networkscan.py  portscan.py  postgres.py  readfiles.py  redis.py  smbhash.py  smtp.py  socksproxy.py  template.py  tomcat.py  zabbix.py
screenshot/: readfiles_example_ssrf_1
src/ssrfmap/: cli.py
src/ssrfmap/core/: config.py  handler.py  requester.py  ssrf.py  utils.py
src/ssrfmap/handlers/: http.py
src/ssrfmap/modules/: alibaba.py  aws.py  consul.py  custom.py  digitalocean.py  docker.py  fastcgi.py  gce.py  github.py  httpcollaborator.py  memcache.py  mysql.py  networkscan.py  portscan.py  readfiles.py  redis.py  smbhash.py  smtp.py  socksproxy.py  template.py  tomcat.py  zabbix.py
